<resources>
    <string name="app_name">SMD Assignment 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ratings">Ratings</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant" />
    <string name="add_restaurant">Add Restaurant</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="search_restaurant">Search</string>
</resources>