<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".AddRestaurantActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_restaurant"
        android:textSize="30sp"
        android:gravity="center"
        android:paddingBottom="60dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/restaurant_name"
        android:autofillHints="name"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLocation"
        android:hint="@string/location"
        android:autofillHints="postalAddress"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPhone"
        android:inputType="phone"
        android:hint="@string/phone"
        android:autofillHints="phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDescription"
        android:inputType="textMultiLine"
        android:lines="2"
        android:hint="@string/description"
        android:autofillHints="null" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRating"
        android:inputType="numberDecimal"
        android:hint="@string/ratings"
        android:autofillHints="null" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/btnAdd"
        android:layout_marginTop="30dp" />

</LinearLayout>