<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:paddingVertical="6dp"
    tools:context=".RestaurantFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ratings"
            android:gravity="center"
            android:background="@color/yellow"
            android:id="@+id/tvRating"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/light_yellow"
            android:paddingVertical="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/restaurant"
                    android:contentDescription="@string/restaurant"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/restaurant_name"
                    android:id="@+id/tvName"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/mapsandflags" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/location"
                    android:id="@+id/tvLocation" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/phonecall" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/phone"
                    android:id="@+id/tvPhone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/description" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:text="@string/description"
                    android:id="@+id/tvDescription" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/light_yellow"
            android:paddingVertical="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/telephonecall"
                android:paddingVertical="5dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingVertical="5dp"
                android:src="@drawable/chat" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
